tests/error/func_code_error.gw
#! [contains] in function:
class C {
  fun void test() {
    <<< b >>>;
  }
}
